--- a/Natours/css/style.css
+++ b/Natours/css/style.css
@@ -31,6 +31,138 @@ body {
                     #28b485a0) , url(../img/hero.jpg);
     background-size: cover;
     background-position: top;
+    position: relative;
 
     clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
+}
+
+
+.logo-box{
+    position: absolute;
+    top: 40px;
+    left: 40px;
+}
+
+.logo{
+    height: 35px;
+
+}
+
+.logo:hover{
+    
+    animation: spinner 5s linear;
+    animation-iteration-count: infinite;
+}
+.text-box{
+    position: absolute;
+    top: 40%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+
+}
+
+.heading-primary{
+    color: #fff;
+    text-transform: uppercase;
+    margin-bottom: 60px;
+}
+
+.heading-primary-main{
+    display: block;
+    font-size: 60px;
+    font-weight: 400;
+    letter-spacing: 35px;
+
+    animation-name: moveInLeft;
+    animation-duration: 1.5s;
+    animation-timing-function: ease-out;
+
+}
+
+.heading-primary-sub{
+    display: block;
+    font-size: 20px;
+    font-weight: 400;
+    letter-spacing: 17.4px;
+    font-weight: 700;
+
+    animation-name: moveInRight;
+    animation-duration: 1.5s;
+    animation-timing-function: ease-out;
+  
+}
+
+@keyframes moveInLeft{
+    from{
+        opacity: 0;
+        transform: translate(-100px);
+    }
+
+    80%{
+        transform: translate(10px);
+
+    }
+
+    to{
+        opacity: 1;
+        transform: translate(0);
+    }
+}
+
+@keyframes moveInRight{
+    from{
+        opacity: 0;
+        transform: translate(100px);
+    }
+
+    80%{
+        transform: translate(-10px);
+    }
+
+    to{
+        opacity: 1;
+        transform: translate(0);
+    }
+}
+
+@keyframes spinner{
+    from{
+        transform: rotate(0deg);
+    }
+
+    50%{
+        transform: rotate(180deg);
+    }
+
+    to{
+        transform: rotate(360deg);
+    }
+}
+
+.btn:link,
+.btn:visited{
+text-transform: uppercase;
+text-decoration: none;
+padding: 15px 40px;
+display: inline-block;
+transition: all .2s;
+}
+
+.btn:hover{
+    transform: translateY(-4px);
+    box-shadow: 0 10px 20px;
+    box-shadow: transparent;
+}
+
+.btn:active{
+    transform: translateY(-1px);
+    box-shadow: 0 5px 5px;
+    box-shadow: transparent;
+}
+
+.btn-white{
+    background-color: #fff;
+    color: #777;border-radius: 10px;
+
 }
