--- a/Natours/css/style.css
+++ b/Natours/css/style.css
@@ -147,7 +147,27 @@ text-decoration: none;
 padding: 15px 40px;
 display: inline-block;
 transition: all .2s;
+position: relative;
 }
+
+.btn::after{
+    content: "";
+    display: inline-block;
+    height: 100%;
+    width: 100%;
+    border-radius: 10px;
+    position: absolute;
+top: 0;
+left: 0;
+z-index: -1;
+transition: all .4s;
+}
+
+.btn:hover::after{
+    transform: scaleX(1.4) scaleY(1.6);
+    opacity: 0;
+}
+
 
 .btn:hover{
     transform: translateY(-4px);
@@ -163,6 +183,28 @@ transition: all .2s;
 
 .btn-white{
     background-color: #fff;
-    color: #777;border-radius: 10px;
+    color: #777;
+    border-radius: 10px;
 
+}
+
+.btn-white::after{
+    background-color: #fff;
+}
+
+@keyframes moveUp{
+    from{
+        opacity: 0;
+        transform: translatey(100px);
+    }
+
+    to{
+        opacity: 1;
+        transform: translate(0);
+    }
+}
+
+.btn-animated{
+   animation: moveUp 1s ;
+ 
 }
